--- a/templates/includes/wrapper_base.s.jinja
+++ b/templates/includes/wrapper_base.s.jinja
@@ -14,6 +14,8 @@
 	.double 6.0
 {{local_prefix}}seven:
 	.double 7.0
+{{local_prefix}}eight:
+	.double 8.0
 	## define main
 	.text
 	.globl	{{id_prefix}}main
