more template tweaks

--- a/templates/includes/target_shim.c.jinja
+++ b/templates/includes/target_shim.c.jinja
@@ -3,6 +3,6 @@
 int target(void) {
     // a shim for dbl_target, since wrapper script expects
     // a 'target' function with an integer return value
-    return dbl_target(1.0, 2.0, 3.0, 4.0, 5.0, 6.0, 7.0, 8.0);
+    return (int) dbl_target(1.0, 2.0, 3.0, 4.0, 5.0, 6.0, 7.0, 8.0);
 }
 {% endif %}
